# asistente-conocimiento

./: .env.example  .gitignore  README.md
backend/: .env.example  .env.test  README.md  alembic.ini  debug_test.py  init_db.py  pyproject.toml  run.py
backend/alembic/: SQLCIPHER_NOTES.md  env.py
backend/alembic/versions/: 23b7d269978c_initial_schema.py  3336ed844a79_add_documents_models_and_document_.py  3d3a1116bd93_add_performancemetric_model_for_query_.py  add_cache_hit_to_queries_table.py  add_generated_content_table.py  add_quiz_attempts_table.py  (+5 more)
backend/app/: database.py  exceptions.py  main.py
backend/scripts/: generate_encryption_keys.py
backend/tests/: conftest.py  test_admin_routes.py  test_admin_users.py  test_audit_integration.py  test_audit_service.py  test_auth.py  test_cache_service.py  test_config.py  test_database.py  test_debug_deps.py  test_document_deletion.py  test_document_download.py  test_document_extraction.py  test_document_listing.py  test_document_service_unit.py  test_download_integration.py  test_encryption_story_5_3.py  test_error_handling.py  test_ia_endpoints_integration.py  test_knowledge.py  test_learning_path_generation.py  test_llm_service.py  test_middleware.py  test_models_document.py  test_models_query.py  test_password_validation.py  test_project_structure.py  test_quiz_generation.py  test_quiz_submission.py  test_rag_service.py  test_rate_limiter_middleware.py  test_retrieval_service.py  test_schemas_ia.py  test_search_service.py  test_story_36_integration.py  test_timeout_handling.py  test_user_password.py
(+111 files in other folders)
