[tool.poetry]
name = "asistente-conocimiento-backend"
version = "0.1.0"
description = "Backend para Asistente de Conocimiento Corporativo - Sistema de IA Generativa para Capacitación"
authors = ["Equipo de Desarrollo <dev@asistente-conocimiento.cl>"]
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlmodel = "0.0.14"
alembic = "^1.13.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.9"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.0"
bcrypt = "4.2.0"
pypdf = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
reportlab = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
